Fix overview page overflow bug

--- a/packages/frontend/src/styles/globals.css
+++ b/packages/frontend/src/styles/globals.css
@@ -1,5 +1,7 @@
 body,html, #__next, #__next > .MuiBox-root{
     height: 100%;
+    max-height: 100%;
+    overflow: hidden;
 }
 body{
     margin:0;
